--- a/next/package.json
+++ b/next/package.json
@@ -14,7 +14,10 @@
     "lint": "next lint"
   },
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "@types/react": "19.1.2",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "^15.3.1",
     "typescript": "5.8.3"
   }
 }
